--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ body {
 
 @media (max-width: 100px) {
   #baseTime {
-    width: auto;
+    width: 100px;
   }
 }
 
@@ -254,6 +254,7 @@ body {
     font-size: 16px;
   }
 }
+
 
 
 
