--- a/style.css
+++ b/style.css
@@ -239,6 +239,12 @@ body {
   background: #009900;
 }
 
+@media (max-width: 300px) {
+  #baseZone {
+    width: 40%;
+  }
+}
+
 @media (max-width: 100px) {
   #baseTime {
     width: 33%;
@@ -254,6 +260,7 @@ body {
     font-size: 16px;
   }
 }
+
 
 
 
